--- a/xss/production/test/ms4.html
+++ b/xss/production/test/ms4.html
@@ -90,6 +90,7 @@ var img1;var img2;var fade1;var fade2;
         $super(
         manager        );
         this.events = new ms.event.EventHolder(); 
+        var this__  = this;
                 var this__ = this;
                     var ____i1 = new ms.state.Interpolator(
                         default_interpolate,
