--- a/xss/production/test/3js_carousel.html
+++ b/xss/production/test/3js_carousel.html
@@ -16,6 +16,7 @@
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
 		<script type="text/javascript" src="../js/ms-streamer.js"></script>
 		<script type="text/javascript" src="../js/ms-ui.js"></script>
 		<script type="text/javascript" src="../js/three/Three.js"></script>
@@ -25,10 +26,12 @@
 <script type="text/javascript">		
 var renderer = new THREE.CanvasRenderer();	
 var ui;
+var SoundUtils;
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
+var canvas_position = {x:0, y:0};
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var __label1;var lbl1;
@@ -43,9 +46,10 @@ application.events = new ms.event.EventHolder();
 				canvas: drawingCanvas
 			};
             var streamer = new ms.streamer.Streamer();							
-			var ui = new ms.ui.Manager(client, streamer);
+			var ui = new ms.ui.Manager(client, streamer);			
 			var g_ui = ui;
 			var g_ui_root = ui.root;
+			var mouse_pressed = false;
 		}
 	// --------RESOURCES---------
         var global_package_items = [];
@@ -109,6 +113,7 @@ soundRenderer = new THREE.SoundRenderer();
 document.body.appendChild( soundRenderer.domElement );
 renderer.setSize( app_width, app_height );
 function render() {
+canvas_position = getElementPosition(drawingCanvas);
 var now   = new Date().getTime();
 if (g_elapsed < 0)
     g_delta = 0; //first update
@@ -121,9 +126,11 @@ application.events.dispatch("switch_cameras", []);
 }
 var img_plane;var img_reflect;var scene;var camera_1;
         function create_my_plane(
-     ) {  		
-			var my_plane = new THREE.Object3D();
+     ) { 
+    var my_plane;
+			my_plane = new THREE.Object3D();
 			my_plane.events = new ms.event.EventHolder();
+        var this__ = my_plane;
 	my_plane.set_image = function(value) 
 	{
 		set_transform_image(my_plane, value);
@@ -151,7 +158,7 @@ new THREE.Plane(
 	    img_plane = new THREE.Mesh(img_plane_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(img_plane);
 		img_plane.events = new ms.event.EventHolder();
-            my_plane.addChild(img_plane);
+				my_plane.addChild(img_plane);
             var img_reflect;
 	    var img_reflect_plane = 
 new THREE.Plane(
@@ -164,7 +171,7 @@ new THREE.Plane(
             img_reflect.scale.y = 0.800000012;
             img_reflect.position.y = -131.199997;
             set_rotation_x(img_reflect.rotation, 180);
-            my_plane.addChild(img_reflect);
+				my_plane.addChild(img_reflect);
         return my_plane;
         }
 threejs_load_resources(function()
@@ -235,18 +242,55 @@ application.speed = -0.200000003 * (window.innerWidth / 2 - x) / window.innerWid
 	);
 if(ui)
 {	
+	SoundUtils = new ms.ui.SoundUtils();
 	drawingCanvas.onmousemove = function(ev)
 	{
-		ui.mousemove(ev.clientX, ev.clientY);                  
+		ui.mousemove(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmousedown = function(ev)
 	{
-		ui.mousedown(ev.clientX, ev.clientY);                  
+		ui.mousedown(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmouseup = function(ev)
 	{
-		ui.mouseup(ev.clientX, ev.clientY);                  
-	};	
+		ui.mouseup(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
+	};		
+	ui.events.addListener("mousedown", function(x,y)
+	{    
+		application.events.dispatch("mousedown", [x, y]);
+	});
+	ui.events.addListener("mouseup", function(x,y)
+	{    
+		application.events.dispatch("mouseup", [x, y]);
+	});
+	ui.events.addListener("mousemove", function(x,y)
+	{    
+		application.events.dispatch("mousemove", [x, y]);
+	});
+	ui.events.addListener("click", function(x,y)
+	{    
+		application.events.dispatch("click", [x, y]);
+	});
+	ui.events.addListener("drag", function(x,y)
+	{    
+		application.events.dispatch("drag", [x, y]);
+	});
+	ui.events.addListener("dragend", function(x,y)
+	{    
+		application.events.dispatch("dragend", [x, y]);
+	});
+	ui.events.addListener("keyup", function(keycode)
+	{    
+		application.events.dispatch("keyup", [keycode]);
+	});
+	ui.events.addListener("keydown", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
+	ui.events.addListener("keypress", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
 		    __label1 = new ms.ui.Label( 
 	    "15px Verdana",g_ui_root.manager, g_ui_root);
         __label1 = __label1;
