--- a/xss/production/test/3js_cube.html
+++ b/xss/production/test/3js_cube.html
@@ -8,34 +8,33 @@
 	body{
 	}
 </style>
-<script type="text/javascript" src="../js/three/Detector.js"></script>
-<script type="text/javascript" src="../js/three/Three.js"></script>
-<script type="text/javascript" src="../js/three/Stats.js"></script>
-<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
-<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
-<script type="text/javascript" src="../js/ms-ui.js"></script>
-<script type="text/javascript" src="../js/ms-streamer.js"></script>
-<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+		<script type="text/javascript" src="../js/ms-ui.js"></script>
+		<script type="text/javascript" src="../js/three/Three.js"></script>
+		<script type="text/javascript" src="../js/three/Stats.js"></script>
+		<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
+		<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript">		
 var renderer = new THREE.CanvasRenderer();	
 var ui;
+var SoundUtils;
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
+var canvas_position = {x:0, y:0};
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var lbl0;
 var application = {};
 application.events = new ms.event.EventHolder();
-		var streamer = new ms.streamer.Streamer();
 		if(drawingCanvas){
 			var client =
 			{
@@ -43,9 +42,11 @@ application.events = new ms.event.EventHolder();
 				height: window.innerHeight,
 				canvas: drawingCanvas
 			};
-			var ui = new ms.ui.Manager(client, streamer);
+            var streamer = new ms.streamer.Streamer();							
+			var ui = new ms.ui.Manager(client, streamer);			
 			var g_ui = ui;
 			var g_ui_root = ui.root;
+			var mouse_pressed = false;
 		}
 	// --------RESOURCES---------
 // --------RESOURCES---------
@@ -53,6 +54,7 @@ soundRenderer = new THREE.SoundRenderer();
 document.body.appendChild( soundRenderer.domElement );
 renderer.setSize( app_width, app_height );
 function render() {
+canvas_position = getElementPosition(drawingCanvas);
 var now   = new Date().getTime();
 if (g_elapsed < 0)
     g_delta = 0; //first update
@@ -63,69 +65,73 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var materials = 
+var materials;var __basic_material1;var __basic_material2;var __basic_material3;var __basic_material4;var __basic_material5;var __basic_material6;var plane_material;var scene;var camera_1;var cube_1;var plane_1;
+threejs_load_resources(function()
+{
+materials = 
 new Array(
 );
-var __basic_material1 = new THREE.MeshBasicMaterial({
+__basic_material1 = new THREE.MeshBasicMaterial({
 color:Math.random() * 0xffffff
 	});
 	materials.push(__basic_material1);
-var __basic_material2 = new THREE.MeshBasicMaterial({
+__basic_material2 = new THREE.MeshBasicMaterial({
 color:Math.random() * 0xffffff
 	});
 	materials.push(__basic_material2);
-var __basic_material3 = new THREE.MeshBasicMaterial({
+__basic_material3 = new THREE.MeshBasicMaterial({
 color:Math.random() * 0xffffff
 	});
 	materials.push(__basic_material3);
-var __basic_material4 = new THREE.MeshBasicMaterial({
+__basic_material4 = new THREE.MeshBasicMaterial({
 color:Math.random() * 0xffffff
 	});
 	materials.push(__basic_material4);
-var __basic_material5 = new THREE.MeshBasicMaterial({
+__basic_material5 = new THREE.MeshBasicMaterial({
 color:Math.random() * 0xffffff
 	});
 	materials.push(__basic_material5);
-var __basic_material6 = new THREE.MeshBasicMaterial({
+__basic_material6 = new THREE.MeshBasicMaterial({
 color:Math.random() * 0xffffff
 	});
 	materials.push(__basic_material6);
-var plane_material = new THREE.MeshBasicMaterial({
+plane_material = new THREE.MeshBasicMaterial({
 color:Grey
 	});
-                set_material_alpha(plane_material, 50);
-var scene = 
+            set_material_alpha(plane_material, 50);
+scene = 
 new THREE.Scene(
 );
-var camera_1 = 
+camera_1 = 
 new THREE.Camera(
 70,1.5,1,1000);
-                camera_1.position.y = 300;
-                camera_1.position.z = 500;
+		active_camera = camera_1;
+            camera_1.position.y = 300;
+            camera_1.position.z = 500;
 	    var cube_1_cube = 
 new THREE.Cube(
 200,200,200,1,1,1,materials);
-	    var cube_1 = new THREE.Mesh(cube_1_cube, new THREE.MeshFaceMaterial());
+	    cube_1 = new THREE.Mesh(cube_1_cube, new THREE.MeshFaceMaterial());
 	    scene.addObject(cube_1);
 		cube_1.events = new ms.event.EventHolder();
-                cube_1.position.y = 150;
+            cube_1.position.y = 150;
 	    var plane_1_plane = 
 new THREE.Plane(
 200,200);
-	    var plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
+	    plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
 	    scene.addObject(plane_1);
 		plane_1.events = new ms.event.EventHolder();
-                set_rotation_x(plane_1.rotation, -90);
-                application.x_target_rotation = 0;
-                application.x_target_rotation_on_mouse_down = 0;
-                application.mouse_x = 0;
-                application.mouse_x_on_mouse_down = 0;
-                application.y_target_rotation = 0;
-                application.y_target_rotation_on_mouse_down = 0;
-                application.mouse_y = 0;
-                application.mouse_y_on_mouse_down = 0;
-                application.window_half_x = app_width / 2;
-                application.window_half_y = app_height / 2;
+            set_rotation_x(plane_1.rotation, -90);
+            application.x_target_rotation = 0;
+            application.x_target_rotation_on_mouse_down = 0;
+            application.mouse_x = 0;
+            application.mouse_x_on_mouse_down = 0;
+            application.y_target_rotation = 0;
+            application.y_target_rotation_on_mouse_down = 0;
+            application.mouse_y = 0;
+            application.mouse_y_on_mouse_down = 0;
+            application.window_half_x = app_width / 2;
+            application.window_half_y = app_height / 2;
 	var ev_parent = this;
 	application.events.addListener("mousedown", function(x,y)
 	{    
@@ -153,27 +159,63 @@ set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y
 	}
 	);
 if(ui)
-{
-	ui.load_resources(function(){		
+{	
+	SoundUtils = new ms.ui.SoundUtils();
 	drawingCanvas.onmousemove = function(ev)
 	{
-		ui.mousemove(ev.clientX, ev.clientY);                  
+		ui.mousemove(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmousedown = function(ev)
 	{
-		ui.mousedown(ev.clientX, ev.clientY);                  
+		ui.mousedown(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmouseup = function(ev)
 	{
-		ui.mouseup(ev.clientX, ev.clientY);                  
-	};	
+		ui.mouseup(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
+	};		
+	ui.events.addListener("mousedown", function(x,y)
+	{    
+		application.events.dispatch("mousedown", [x, y]);
+	});
+	ui.events.addListener("mouseup", function(x,y)
+	{    
+		application.events.dispatch("mouseup", [x, y]);
+	});
+	ui.events.addListener("mousemove", function(x,y)
+	{    
+		application.events.dispatch("mousemove", [x, y]);
+	});
+	ui.events.addListener("click", function(x,y)
+	{    
+		application.events.dispatch("click", [x, y]);
+	});
+	ui.events.addListener("drag", function(x,y)
+	{    
+		application.events.dispatch("drag", [x, y]);
+	});
+	ui.events.addListener("dragend", function(x,y)
+	{    
+		application.events.dispatch("dragend", [x, y]);
+	});
+	ui.events.addListener("keyup", function(keycode)
+	{    
+		application.events.dispatch("keyup", [keycode]);
+	});
+	ui.events.addListener("keydown", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
+	ui.events.addListener("keypress", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
 		    lbl0 = new ms.ui.Label( 
 	    "12px Verdana",g_ui_root.manager, g_ui_root);
         lbl0 = lbl0;
-                lbl0.text("Drag mouse to spin the cube");
-                lbl0.position(200, 75);
-		g_ui.fill_background = false;
-	});
+            lbl0.set_x(200);
+            lbl0.set_y(75);
+            lbl0.text("Drag mouse to spin the cube");
+	g_ui.fill_background = false;	
 }
 var event_manager = new ms.event.ThreeEventManager();
 document.onmousemove = function(ev)
@@ -203,6 +245,7 @@ document.onkeypress = function(ev)
 application.events.dispatch("init", []);
 document.body.appendChild( renderer.domElement );
 animate();
+});
 function animate() {
 	if(ui)
 		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
@@ -210,7 +253,7 @@ function animate() {
 	render();
 	if(ui)
 		ui.draw(drawingCanvas.getContext('2d'));
-}
+	}
 </script>
 </body>
 </html>
