--- a/xss/production/test/3js_lights.html
+++ b/xss/production/test/3js_lights.html
@@ -9,33 +9,32 @@
 	background:Black;
 	}
 </style>
-<script type="text/javascript" src="../js/three/Detector.js"></script>
-<script type="text/javascript" src="../js/three/Three.js"></script>
-<script type="text/javascript" src="../js/three/Stats.js"></script>
-<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
-<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
-<script type="text/javascript" src="../js/ms-ui.js"></script>
-<script type="text/javascript" src="../js/ms-streamer.js"></script>
-<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+		<script type="text/javascript" src="../js/ms-ui.js"></script>
+		<script type="text/javascript" src="../js/three/Three.js"></script>
+		<script type="text/javascript" src="../js/three/Stats.js"></script>
+		<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
+		<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript">		
 var renderer = new THREE.CanvasRenderer();	
 var ui;
+var SoundUtils;
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
+var canvas_position = {x:0, y:0};
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
 application.events = new ms.event.EventHolder();
-		var streamer = new ms.streamer.Streamer();
 		if(drawingCanvas){
 			var client =
 			{
@@ -43,9 +42,11 @@ application.events = new ms.event.EventHolder();
 				height: window.innerHeight,
 				canvas: drawingCanvas
 			};
-			var ui = new ms.ui.Manager(client, streamer);
+            var streamer = new ms.streamer.Streamer();							
+			var ui = new ms.ui.Manager(client, streamer);			
 			var g_ui = ui;
 			var g_ui_root = ui.root;
+			var mouse_pressed = false;
 		}
 	// --------RESOURCES---------
 // --------RESOURCES---------
@@ -53,6 +54,7 @@ soundRenderer = new THREE.SoundRenderer();
 document.body.appendChild( soundRenderer.domElement );
 renderer.setSize( app_width, app_height );
 function render() {
+canvas_position = getElementPosition(drawingCanvas);
 var now   = new Date().getTime();
 if (g_elapsed < 0)
     g_delta = 0; //first update
@@ -63,67 +65,71 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var material_sphere1 = new THREE.MeshLambertMaterial({
+var material_sphere1;var scene;var camera_1;var amb_light_1;var light1;var light2;var light3;var particle1;var particle2;var particle3;var sphere1;
+threejs_load_resources(function()
+{
+material_sphere1 = new THREE.MeshLambertMaterial({
 color:White,shading:flat_shading
 	});
-var scene = 
+scene = 
 new THREE.Scene(
 );
-var camera_1 = 
+camera_1 = 
 new THREE.Camera(
 65,1.5,1,1000);
-                camera_1.position.z = 100;
-var amb_light_1 = 
+		active_camera = camera_1;
+            camera_1.position.z = 100;
+amb_light_1 = 
 new THREE.AmbientLight(
 MidnightBlue);
 		;
 	scene.addLight(amb_light_1);
-var light1 = 
+light1 = 
 new THREE.PointLight(
 Red,1,50);
 		;
 	scene.addLight(light1);
-var light2 = 
+light2 = 
 new THREE.PointLight(
 Lime,1,50);
 		;
 	scene.addLight(light2);
-var light3 = 
+light3 = 
 new THREE.PointLight(
 Yellow,1,50);
 		;
 	scene.addLight(light3);
-			var particle1 = new THREE.Particle( 
+			particle1 = new THREE.Particle( 
 			new THREE.ParticleCanvasMaterial( 
 			{ color: Red, program: program_fill, } 
 			) );	
 			scene.addObject( particle1 );	
-                particle1.scale.x = 0.5;
-                particle1.scale.y = 0.5;
-                particle1.scale.z = 0.5;
-			var particle2 = new THREE.Particle( 
+            particle1.scale.x = 0.5;
+            particle1.scale.y = 0.5;
+            particle1.scale.z = 0.5;
+			particle2 = new THREE.Particle( 
 			new THREE.ParticleCanvasMaterial( 
 			{ color: Lime, program: program_fill, } 
 			) );	
 			scene.addObject( particle2 );	
-                particle2.scale.x = 0.5;
-                particle2.scale.y = 0.5;
-                particle2.scale.z = 0.5;
-			var particle3 = new THREE.Particle( 
+            particle2.scale.x = 0.5;
+            particle2.scale.y = 0.5;
+            particle2.scale.z = 0.5;
+			particle3 = new THREE.Particle( 
 			new THREE.ParticleCanvasMaterial( 
 			{ color: Yellow, program: program_fill, } 
 			) );	
 			scene.addObject( particle3 );	
-                particle3.scale.x = 0.5;
-                particle3.scale.y = 0.5;
-                particle3.scale.z = 0.5;
+            particle3.scale.x = 0.5;
+            particle3.scale.y = 0.5;
+            particle3.scale.z = 0.5;
 	    var sphere1_sphere = 
 new THREE.Sphere(
 20,32,16);
-	    var sphere1 = new THREE.Mesh(sphere1_sphere, material_sphere1);
+	    sphere1 = new THREE.Mesh(sphere1_sphere, material_sphere1);
 	    scene.addObject(sphere1);
 		sphere1.events = new ms.event.EventHolder();
-                application.time = null;
+            application.time = null;
 	var ev_parent = this;
 	application.events.addListener("updates", function()
 	{    
@@ -151,22 +157,57 @@ light3.position.z = particle3.position.z;
 	}
 	);
 if(ui)
-{
-	ui.load_resources(function(){		
+{	
+	SoundUtils = new ms.ui.SoundUtils();
 	drawingCanvas.onmousemove = function(ev)
 	{
-		ui.mousemove(ev.clientX, ev.clientY);                  
+		ui.mousemove(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmousedown = function(ev)
 	{
-		ui.mousedown(ev.clientX, ev.clientY);                  
+		ui.mousedown(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmouseup = function(ev)
 	{
-		ui.mouseup(ev.clientX, ev.clientY);                  
-	};	
-		g_ui.fill_background = false;
+		ui.mouseup(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
+	};		
+	ui.events.addListener("mousedown", function(x,y)
+	{    
+		application.events.dispatch("mousedown", [x, y]);
 	});
+	ui.events.addListener("mouseup", function(x,y)
+	{    
+		application.events.dispatch("mouseup", [x, y]);
+	});
+	ui.events.addListener("mousemove", function(x,y)
+	{    
+		application.events.dispatch("mousemove", [x, y]);
+	});
+	ui.events.addListener("click", function(x,y)
+	{    
+		application.events.dispatch("click", [x, y]);
+	});
+	ui.events.addListener("drag", function(x,y)
+	{    
+		application.events.dispatch("drag", [x, y]);
+	});
+	ui.events.addListener("dragend", function(x,y)
+	{    
+		application.events.dispatch("dragend", [x, y]);
+	});
+	ui.events.addListener("keyup", function(keycode)
+	{    
+		application.events.dispatch("keyup", [keycode]);
+	});
+	ui.events.addListener("keydown", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
+	ui.events.addListener("keypress", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
+	g_ui.fill_background = false;	
 }
 var event_manager = new ms.event.ThreeEventManager();
 document.onmousemove = function(ev)
@@ -196,6 +237,7 @@ document.onkeypress = function(ev)
 application.events.dispatch("init", []);
 document.body.appendChild( renderer.domElement );
 animate();
+});
 function animate() {
 	if(ui)
 		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
@@ -203,7 +245,7 @@ function animate() {
 	render();
 	if(ui)
 		ui.draw(drawingCanvas.getContext('2d'));
-}
+	}
 </script>
 </body>
 </html>
