--- a/xss/production/test/3js_model.html
+++ b/xss/production/test/3js_model.html
@@ -16,6 +16,7 @@
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
 		<script type="text/javascript" src="../js/three/Three.js"></script>
 		<script type="text/javascript" src="../js/three/Stats.js"></script>
 		<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
@@ -25,15 +26,17 @@
 <script type="text/javascript">		
 var renderer = new THREE.CanvasRenderer();	
 var ui;
+var SoundUtils;
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
+var canvas_position = {x:0, y:0};
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
 application.events = new ms.event.EventHolder();
-		var streamer = new ms.streamer.Streamer();
+		var streamer = new ms.streamer.Streamer();		
 	// --------RESOURCES---------
         var global_package_items = [];
                 global_package_items.push(
@@ -53,7 +56,15 @@ application.events = new ms.event.EventHolder();
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
-});
+});	
+		global_package_items.push({
+			id:				"invalid_res",
+			resource_type:	RESOURCE_IMAGE,
+			src:			"images/no_res.png",
+			frame_width:	null,
+			frame_height:	null,
+			animations:		[]
+		});
         var global_package = new ms.streamer.Package(streamer, global_package_items);	
 		global_package.load();	
     // --------RESOURCES---------
@@ -61,6 +72,7 @@ soundRenderer = new THREE.SoundRenderer();
 document.body.appendChild( soundRenderer.domElement );
 renderer.setSize( app_width, app_height );
 function render() {
+canvas_position = getElementPosition(drawingCanvas);
 var now   = new Date().getTime();
 if (g_elapsed < 0)
     g_delta = 0; //first update
@@ -71,27 +83,30 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var scene = 
+var scene;var camera_1;var a_ligth;var d_ligth_1;var male_model;var female_model;
+threejs_load_resources(function()
+{
+scene = 
 new THREE.Scene(
 );
-var camera_1 = 
+camera_1 = 
 new THREE.Camera(
 75,1.5,1,100000);
 		active_camera = camera_1;
             camera_1.position.z = 500;
-var a_ligth = 
+a_ligth = 
 new THREE.AmbientLight(
 Salmon);
 		;
 	scene.addLight(a_ligth);
-var d_ligth_1 = 
+d_ligth_1 = 
 new THREE.DirectionalLight(
 Ivory);
 		;
 	scene.addLight(d_ligth_1);
             d_ligth_1.position.y = -70;
             d_ligth_1.position.z = 100;
-	var male_model = new THREE.Object3D();
+	male_model = new THREE.Object3D();
 	var male_model_loader = 
 	generate_model_loader(streamer.get_resource('model/male02/Male02_slim.js').type);
 		male_model_loader.load(
@@ -118,7 +133,7 @@ Ivory);
 	}
 	);
 		application.are_obj_events = true;
-	var female_model = new THREE.Object3D();
+	female_model = new THREE.Object3D();
 	var female_model_loader = 
 	generate_model_loader(streamer.get_resource('model_1').type);
 		female_model_loader.load(
@@ -162,10 +177,9 @@ application.mouse_y = y - app_height / 2;
 	}
 	);
 if(ui)
-{
-	ui.load_resources(function(){		
-		g_ui.fill_background = false;
-	});
+{	
+	SoundUtils = new ms.ui.SoundUtils();
+	g_ui.fill_background = false;	
 }
 var event_manager = new ms.event.ThreeEventManager();
 document.onmousemove = function(ev)
@@ -195,6 +209,7 @@ document.onkeypress = function(ev)
 application.events.dispatch("init", []);
 document.body.appendChild( renderer.domElement );
 animate();
+});
 function animate() {
 	if(ui)
 		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
