--- a/xss/production/test/3js_package.html
+++ b/xss/production/test/3js_package.html
@@ -16,6 +16,7 @@
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
 		<script type="text/javascript" src="../js/ms-streamer.js"></script>
 		<script type="text/javascript" src="../js/ms-ui.js"></script>
 		<script type="text/javascript" src="../js/three/Three.js"></script>
@@ -25,16 +26,18 @@
 <script type="text/javascript">		
 var renderer = new THREE.CanvasRenderer();	
 var ui;
+var SoundUtils;
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
+var canvas_position = {x:0, y:0};
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var __label1;
 var application = {};
 application.events = new ms.event.EventHolder();
-		var streamer = new ms.streamer.Streamer();
+		var streamer = new ms.streamer.Streamer();		
 		if(drawingCanvas){
 			var client =
 			{
@@ -43,9 +46,10 @@ application.events = new ms.event.EventHolder();
 				canvas: drawingCanvas
 			};
             var streamer = new ms.streamer.Streamer();							
-			var ui = new ms.ui.Manager(client, streamer);
+			var ui = new ms.ui.Manager(client, streamer);			
 			var g_ui = ui;
 			var g_ui_root = ui.root;
+			var mouse_pressed = false;
 		}
 	// --------RESOURCES---------
         var global_package_items = [];
@@ -76,8 +80,8 @@ application.events = new ms.event.EventHolder();
 		frame_height:	null,
 		animations:		[]
 });
-				var pack_1_items = [];
-                pack_1_items.push(
+				var pack_1 = new ms.streamer.Package(streamer);				
+                pack_1.add_item(
             {
 		id:				"__image4",
 		resource_type:	RESOURCE_IMAGE,
@@ -86,7 +90,7 @@ application.events = new ms.event.EventHolder();
 		frame_height:	null,
 		animations:		[]
 });
-                pack_1_items.push(
+                pack_1.add_item(
             {
 		id:				"__image5",
 		resource_type:	RESOURCE_IMAGE,
@@ -94,7 +98,15 @@ application.events = new ms.event.EventHolder();
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
-});
+});	
+		global_package_items.push({
+			id:				"invalid_res",
+			resource_type:	RESOURCE_IMAGE,
+			src:			"images/no_res.png",
+			frame_width:	null,
+			frame_height:	null,
+			animations:		[]
+		});
         var global_package = new ms.streamer.Package(streamer, global_package_items);	
 		global_package.load();	
     // --------RESOURCES---------
@@ -102,6 +114,7 @@ soundRenderer = new THREE.SoundRenderer();
 document.body.appendChild( soundRenderer.domElement );
 renderer.setSize( app_width, app_height );
 function render() {
+canvas_position = getElementPosition(drawingCanvas);
 var now   = new Date().getTime();
 if (g_elapsed < 0)
     g_delta = 0; //first update
@@ -112,70 +125,72 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var scene = 
+var scene;var camera_1;var plane_1;var plane_2;var plane_3;var container;var plane_4;var plane_5;
+threejs_load_resources(function()
+{
+scene = 
 new THREE.Scene(
 );
-var camera_1 = 
+camera_1 = 
 new THREE.Camera(
 45,1.5,1,10000);
-                camera_1.position.x = 500;
-                camera_1.position.y = 500;
-                camera_1.position.z = 1000;
+		active_camera = camera_1;
+            camera_1.position.x = 500;
+            camera_1.position.y = 500;
+            camera_1.position.z = 1000;
 	    var plane_1_plane = 
 new THREE.Plane(
 128,164);
-	    var plane_1 = new THREE.Mesh(plane_1_plane, new THREE.MeshBasicMaterial());
+	    plane_1 = new THREE.Mesh(plane_1_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_1);
 		plane_1.events = new ms.event.EventHolder();
-                plane_1.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test1.png").asset);
-                plane_1.position.x = 100;
-                plane_1.position.y = 100;
+            plane_1.materials[0].map = new THREE.Texture(streamer.get_resource("images/test1.png").data);
+            plane_1.position.x = 100;
+            plane_1.position.y = 100;
 	    var plane_2_plane = 
 new THREE.Plane(
 128,164);
-	    var plane_2 = new THREE.Mesh(plane_2_plane, new THREE.MeshBasicMaterial());
+	    plane_2 = new THREE.Mesh(plane_2_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_2);
 		plane_2.events = new ms.event.EventHolder();
-                plane_2.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test2.png").asset);
-                plane_2.position.x = 300;
-                plane_2.position.y = 100;
+            plane_2.materials[0].map = new THREE.Texture(streamer.get_resource("images/test2.png").data);
+            plane_2.position.x = 300;
+            plane_2.position.y = 100;
 	    var plane_3_plane = 
 new THREE.Plane(
 128,164);
-	    var plane_3 = new THREE.Mesh(plane_3_plane, new THREE.MeshBasicMaterial());
+	    plane_3 = new THREE.Mesh(plane_3_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_3);
 		plane_3.events = new ms.event.EventHolder();
-                plane_3.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test3.png").asset);
-                plane_3.position.x = 100;
-                plane_3.position.y = 300;
-				var pack_1 = 
-					new ms.streamer.Package(streamer, pack_1_items);
+            plane_3.materials[0].map = new THREE.Texture(streamer.get_resource("images/test3.png").data);
+            plane_3.position.x = 100;
+            plane_3.position.y = 300;
 				pack_1.events.addListener("loaded", function()
 				{				
-var container = 
+container = 
 new THREE.Object3D(
 );
 container.events = new ms.event.EventHolder();
 	    var plane_4_plane = 
 new THREE.Plane(
 128,164);
-	    var plane_4 = new THREE.Mesh(plane_4_plane, new THREE.MeshBasicMaterial());
+	    plane_4 = new THREE.Mesh(plane_4_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_4);
 		plane_4.events = new ms.event.EventHolder();
 				container.addChild(plane_4);
 				scene.addObject(container);
-                plane_4.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test4.png").asset);
-                plane_4.position.x = -100;
+            plane_4.materials[0].map = new THREE.Texture(streamer.get_resource("images/test4.png").data);
+            plane_4.position.x = -100;
 	    var plane_5_plane = 
 new THREE.Plane(
 128,164);
-	    var plane_5 = new THREE.Mesh(plane_5_plane, new THREE.MeshBasicMaterial());
+	    plane_5 = new THREE.Mesh(plane_5_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_5);
 		plane_5.events = new ms.event.EventHolder();
 				container.addChild(plane_5);
 				scene.addObject(container);
-                plane_5.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test5.png").asset);
-                plane_5.position.x = -400;
+            plane_5.materials[0].map = new THREE.Texture(streamer.get_resource("images/test5.png").data);
+            plane_5.position.x = -400;
 });
 	var ev_parent = this;
 	application.events.addListener("click", function()
@@ -184,28 +199,64 @@ new THREE.Plane(
 	}
 	);
 if(ui)
-{
-	ui.load_resources(function(){		
+{	
+	SoundUtils = new ms.ui.SoundUtils();
 	drawingCanvas.onmousemove = function(ev)
 	{
-		ui.mousemove(ev.clientX, ev.clientY);                  
+		ui.mousemove(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmousedown = function(ev)
 	{
-		ui.mousedown(ev.clientX, ev.clientY);                  
+		ui.mousedown(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmouseup = function(ev)
 	{
-		ui.mouseup(ev.clientX, ev.clientY);                  
-	};	
+		ui.mouseup(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
+	};		
+	ui.events.addListener("mousedown", function(x,y)
+	{    
+		application.events.dispatch("mousedown", [x, y]);
+	});
+	ui.events.addListener("mouseup", function(x,y)
+	{    
+		application.events.dispatch("mouseup", [x, y]);
+	});
+	ui.events.addListener("mousemove", function(x,y)
+	{    
+		application.events.dispatch("mousemove", [x, y]);
+	});
+	ui.events.addListener("click", function(x,y)
+	{    
+		application.events.dispatch("click", [x, y]);
+	});
+	ui.events.addListener("drag", function(x,y)
+	{    
+		application.events.dispatch("drag", [x, y]);
+	});
+	ui.events.addListener("dragend", function(x,y)
+	{    
+		application.events.dispatch("dragend", [x, y]);
+	});
+	ui.events.addListener("keyup", function(keycode)
+	{    
+		application.events.dispatch("keyup", [keycode]);
+	});
+	ui.events.addListener("keydown", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
+	ui.events.addListener("keypress", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
 		    __label1 = new ms.ui.Label( 
 	    "15px Verdana",g_ui_root.manager, g_ui_root);
         __label1 = __label1;
-                __label1.set_color(Ivory);
-                __label1.text("Press click to load the package");
-                __label1.position(150, 75);
-		g_ui.fill_background = false;
-	});
+            __label1.set_x(150);
+            __label1.set_y(75);
+            __label1.set_color("Ivory");
+            __label1.text("Press click to load the package");
+	g_ui.fill_background = false;	
 }
 var event_manager = new ms.event.ThreeEventManager();
 document.onmousemove = function(ev)
@@ -235,6 +286,7 @@ document.onkeypress = function(ev)
 application.events.dispatch("init", []);
 document.body.appendChild( renderer.domElement );
 animate();
+});
 function animate() {
 	if(ui)
 		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
@@ -242,7 +294,7 @@ function animate() {
 	render();
 	if(ui)
 		ui.draw(drawingCanvas.getContext('2d'));
-}
+	}
 </script>
 </body>
 </html>
