--- a/xss/production/test/3js_transform.html
+++ b/xss/production/test/3js_transform.html
@@ -9,34 +9,33 @@
 	background:FloralWhite;
 	}
 </style>
-<script type="text/javascript" src="../js/three/Detector.js"></script>
-<script type="text/javascript" src="../js/three/Three.js"></script>
-<script type="text/javascript" src="../js/three/Stats.js"></script>
-<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
-<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
-<script type="text/javascript" src="../js/ms-ui.js"></script>
-<script type="text/javascript" src="../js/ms-streamer.js"></script>
-<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
 <script type="text/javascript" src="../js/colors.js"></script>
+<script type="text/javascript" src="../js/ms-streamer.js"></script>
+		<script type="text/javascript" src="../js/ms-ui.js"></script>
+		<script type="text/javascript" src="../js/three/Three.js"></script>
+		<script type="text/javascript" src="../js/three/Stats.js"></script>
+		<script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
+		<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript">		
 var renderer = new THREE.CanvasRenderer();	
 var ui;
+var SoundUtils;
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
 var drawingCanvas = renderer.domElement;
+var canvas_position = {x:0, y:0};
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var lbl0;var lbl1;var lbl2;
 var application = {};
 application.events = new ms.event.EventHolder();
-		var streamer = new ms.streamer.Streamer();
 		if(drawingCanvas){
 			var client =
 			{
@@ -44,9 +43,11 @@ application.events = new ms.event.EventHolder();
 				height: window.innerHeight,
 				canvas: drawingCanvas
 			};
-			var ui = new ms.ui.Manager(client, streamer);
+            var streamer = new ms.streamer.Streamer();							
+			var ui = new ms.ui.Manager(client, streamer);			
 			var g_ui = ui;
 			var g_ui_root = ui.root;
+			var mouse_pressed = false;
 		}
 	// --------RESOURCES---------
 // --------RESOURCES---------
@@ -54,6 +55,7 @@ soundRenderer = new THREE.SoundRenderer();
 document.body.appendChild( soundRenderer.domElement );
 renderer.setSize( app_width, app_height );
 function render() {
+canvas_position = getElementPosition(drawingCanvas);
 var now   = new Date().getTime();
 if (g_elapsed < 0)
     g_delta = 0; //first update
@@ -64,68 +66,81 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var cylinder_material = new THREE.MeshBasicMaterial({
+var cylinder_material;var cube_material;var sphere_material;var scene;var camera_1;var light;var cylinder_1;var container;var cube_1;var sphere_1;
+threejs_load_resources(function()
+{
+cylinder_material = new THREE.MeshBasicMaterial({
 color:Math.random() * 0xffffff
 	});
-var cube_material = new THREE.MeshBasicMaterial({
+cube_material = new THREE.MeshBasicMaterial({
 color:Math.random() * 0xffffff
 	});
-var sphere_material = new THREE.MeshNormalMaterial({
+sphere_material = new THREE.MeshNormalMaterial({
 	});
-var scene = 
+scene = 
 new THREE.Scene(
 );
-var camera_1 = 
+camera_1 = 
 new THREE.Camera(
 75,1.5,1,3000);
-                camera_1.position.z = 1000;
-var light = 
+		active_camera = camera_1;
+            camera_1.position.z = 1000;
+light = 
 new THREE.DirectionalLight(
 Ivory);
 		;
 	scene.addLight(light);
-                light.position.y = 0.5;
-                light.position.z = 1;
+            light.position.y = 0.5;
+            light.position.z = 1;
 	    var cylinder_1_cylinder = 
 new THREE.Cylinder(
 200,100,100,500);
-	    var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder, cylinder_material);
+	    cylinder_1 = new THREE.Mesh(cylinder_1_cylinder, cylinder_material);
 	    scene.addObject(cylinder_1);
 		cylinder_1.events = new ms.event.EventHolder();
-                set_rotation_x(cylinder_1.rotation, 70);
-                set_rotation_y(cylinder_1.rotation, 70);
-                cylinder_1.position.x = 600;
-var container = 
+            set_rotation_x(cylinder_1.rotation, 70);
+            set_rotation_y(cylinder_1.rotation, 70);
+            cylinder_1.position.x = 600;
+container = 
 new THREE.Object3D(
 );
 container.events = new ms.event.EventHolder();
 	    var cube_1_cube = 
 new THREE.Cube(
 300,300,300);
-	    var cube_1 = new THREE.Mesh(cube_1_cube, cube_material);
+	    cube_1 = new THREE.Mesh(cube_1_cube, cube_material);
 	    scene.addObject(cube_1);
 		cube_1.events = new ms.event.EventHolder();
 				container.addChild(cube_1);
 				scene.addObject(container);
-                cube_1.position.x = -600;
-                cube_1.position.y = -100;
-                set_rotation_x(cube_1.rotation, 70);
-                set_rotation_y(cube_1.rotation, 70);
+            cube_1.position.x = -600;
+            cube_1.position.y = -100;
+            set_rotation_x(cube_1.rotation, 70);
+            set_rotation_y(cube_1.rotation, 70);
+	var ev_parent = this;
+	cube_1.events.addListener("mousein", function()
+	{    
+		set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + 0.5);
+set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + 0.5);
+set_rotation_z(cube_1.rotation, get_rotation_z(cube_1.rotation) + 0.5);
+	}
+	);
+		application.are_obj_events = true;
 	    var sphere_1_sphere = 
 new THREE.Sphere(
 200,20,20);
-	    var sphere_1 = new THREE.Mesh(sphere_1_sphere, sphere_material);
+	    sphere_1 = new THREE.Mesh(sphere_1_sphere, sphere_material);
 	    scene.addObject(sphere_1);
 		sphere_1.events = new ms.event.EventHolder();
 				container.addChild(sphere_1);
 				scene.addObject(container);
-                sphere_1.position.x = -400;
-                sphere_1.position.y = 400;
-                application.is_shift_down = false;
-                application.is_ctrl_down = false;
-                application.theta = 45;
-                application.mouse_x = null;
-                application.mouse_y = null;
+            sphere_1.position.x = -400;
+            sphere_1.position.y = 400;
+            application.is_shift_down = false;
+            application.is_ctrl_down = false;
+            application.theta = 45;
+            application.mouse_x = null;
+            application.mouse_y = null;
 	var ev_parent = this;
 	application.events.addListener("mousemove", function(x,y)
 	{    
@@ -189,37 +204,75 @@ camera_1.position.z = 1400 * Math.cos(application.theta * Math.PI / 360);
 	}
 	);
 if(ui)
-{
-	ui.load_resources(function(){		
+{	
+	SoundUtils = new ms.ui.SoundUtils();
 	drawingCanvas.onmousemove = function(ev)
 	{
-		ui.mousemove(ev.clientX, ev.clientY);                  
+		ui.mousemove(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmousedown = function(ev)
 	{
-		ui.mousedown(ev.clientX, ev.clientY);                  
+		ui.mousedown(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmouseup = function(ev)
 	{
-		ui.mouseup(ev.clientX, ev.clientY);                  
-	};	
+		ui.mouseup(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
+	};		
+	ui.events.addListener("mousedown", function(x,y)
+	{    
+		application.events.dispatch("mousedown", [x, y]);
+	});
+	ui.events.addListener("mouseup", function(x,y)
+	{    
+		application.events.dispatch("mouseup", [x, y]);
+	});
+	ui.events.addListener("mousemove", function(x,y)
+	{    
+		application.events.dispatch("mousemove", [x, y]);
+	});
+	ui.events.addListener("click", function(x,y)
+	{    
+		application.events.dispatch("click", [x, y]);
+	});
+	ui.events.addListener("drag", function(x,y)
+	{    
+		application.events.dispatch("drag", [x, y]);
+	});
+	ui.events.addListener("dragend", function(x,y)
+	{    
+		application.events.dispatch("dragend", [x, y]);
+	});
+	ui.events.addListener("keyup", function(keycode)
+	{    
+		application.events.dispatch("keyup", [keycode]);
+	});
+	ui.events.addListener("keydown", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
+	ui.events.addListener("keypress", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
 		    lbl0 = new ms.ui.Label( 
 	    "12px Verdana",g_ui_root.manager, g_ui_root);
         lbl0 = lbl0;
-                lbl0.text("Move mouse to rotate the cylinder");
-                lbl0.position(240, 75);
+            lbl0.set_x(240);
+            lbl0.set_y(75);
+            lbl0.text("Move mouse to rotate the cylinder");
 		    lbl1 = new ms.ui.Label( 
 	    "12px Verdana",g_ui_root.manager, g_ui_root);
         lbl1 = lbl1;
-                lbl1.text("Move mouse pressing SHIFT to rotate the transform");
-                lbl1.position(240, 100);
+            lbl1.set_x(240);
+            lbl1.set_y(100);
+            lbl1.text("Move mouse pressing SHIFT to rotate the transform");
 		    lbl2 = new ms.ui.Label( 
 	    "12px Verdana",g_ui_root.manager, g_ui_root);
         lbl2 = lbl2;
-                lbl2.text("Move mouse pressing CTRL to rotate the camera horizontally");
-                lbl2.position(240, 125);
-		g_ui.fill_background = false;
-	});
+            lbl2.set_x(240);
+            lbl2.set_y(125);
+            lbl2.text("Move mouse pressing CTRL to rotate the camera horizontally");
+	g_ui.fill_background = false;	
 }
 var event_manager = new ms.event.ThreeEventManager();
 document.onmousemove = function(ev)
@@ -249,6 +302,7 @@ document.onkeypress = function(ev)
 application.events.dispatch("init", []);
 document.body.appendChild( renderer.domElement );
 animate();
+});
 function animate() {
 	if(ui)
 		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
@@ -256,7 +310,7 @@ function animate() {
 	render();
 	if(ui)
 		ui.draw(drawingCanvas.getContext('2d'));
-}
+	}
 </script>
 </body>
 </html>
