--- a/xss/production/test/box2d5.html
+++ b/xss/production/test/box2d5.html
@@ -8,7 +8,6 @@
 <script type="text/javascript" src="../js/prototype.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
-<script type="text/javascript" src="../js/colors.js"></script>
 		<script type="text/javascript" src="../js/ms-ui.js"></script>
 		<script type="text/javascript" src="../js/ms-streamer.js"></script>
         <script type="text/javascript" src="../js/Box2dWeb-2.1.a.3.min.js"></script> 
@@ -32,11 +31,12 @@ var SoundUtils = new ms.ui.SoundUtils();
 				canvas: drawingCanvas
 			};
             var streamer = new ms.streamer.Streamer();							
-			var ui = new ms.ui.Manager(client, streamer);
+			var ui = new ms.ui.Manager(client, streamer);			
 			var g_ui = ui;
 			var g_ui_root = ui.root;
+			var mouse_pressed = false;
 		}
-		var streamer = new ms.streamer.Streamer();
+		var streamer = new ms.streamer.Streamer();		
         var   b2Vec2 = Box2D.Common.Math.b2Vec2
         ,  b2AABB = Box2D.Collision.b2AABB
         ,  b2Mat22 = Box2D.Common.Math.b2Mat22
@@ -132,13 +132,23 @@ var SoundUtils = new ms.ui.SoundUtils();
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
-});
+});	
+		global_package_items.push({
+			id:				"invalid_res",
+			resource_type:	RESOURCE_IMAGE,
+			src:			"images/no_res.png",
+			frame_width:	null,
+			frame_height:	null,
+			animations:		[]
+		});
         var global_package = new ms.streamer.Package(streamer, global_package_items);	
 		global_package.load();	
+    var canvas_position = {x:0, y:0};
 function start(resolution)  
 {  
 	function updater()  
-	{  
+	{
+		canvas_position = getElementPosition(drawingCanvas);
 		var now   = new Date().getTime();
         if (g_elapsed < 0)
             g_delta = 0; //first update
@@ -208,11 +218,15 @@ var __label1;var __label2;var __label3;var __label4;var __label5;var btn1;var bt
         {
     initialize: function($super
                 , src
-                )
+				, manager, parent
+			)
     {
         $super(
-        src? src : "images/smile_grin_48.png"        );
+        src? src : "images/smile_grin_48.png"
+				, manager, parent
+			        );
         this.events = new ms.event.EventHolder(); 
+        var this__  = this;
 				this.events.addListener('resized', function(cmp)
                 {
                     if (cmp.physics)
@@ -254,11 +268,15 @@ var __label1;var __label2;var __label3;var __label4;var __label5;var btn1;var bt
         {
     initialize: function($super
                 , src
-                )
+				, manager, parent
+			)
     {
         $super(
-        src? src : "images/smile_sad_48.png"        );
+        src? src : "images/smile_sad_48.png"
+				, manager, parent
+			        );
         this.events = new ms.event.EventHolder(); 
+        var this__  = this;
 				this.events.addListener('resized', function(cmp)
                 {
                     if (cmp.physics)
@@ -300,11 +318,15 @@ var __label1;var __label2;var __label3;var __label4;var __label5;var btn1;var bt
         {
     initialize: function($super
                 , src
-                )
+				, manager, parent
+			)
     {
         $super(
-        src? src : "images/img1.png"        );
+        src? src : "images/img1.png"
+				, manager, parent
+			        );
         this.events = new ms.event.EventHolder(); 
+        var this__  = this;
 				this.events.addListener('resized', function(cmp)
                 {
                     if (cmp.physics)
@@ -347,11 +369,15 @@ var __label1;var __label2;var __label3;var __label4;var __label5;var btn1;var bt
         {
     initialize: function($super
                 , src
-                )
+				, manager, parent
+			)
     {
         $super(
-        src? src : "images/stone-12.jpg"        );
+        src? src : "images/stone-12.jpg"
+				, manager, parent
+			        );
         this.events = new ms.event.EventHolder(); 
+        var this__  = this;
 				this.events.addListener('resized', function(cmp)
                 {
                     if (cmp.physics)
@@ -391,11 +417,15 @@ var __label1;var __label2;var __label3;var __label4;var __label5;var btn1;var bt
         {
     initialize: function($super
                 , src
-                )
+				, manager, parent
+			)
     {
         $super(
-        src        );
+        src
+				, manager, parent
+			        );
         this.events = new ms.event.EventHolder(); 
+        var this__  = this;
 	var ev_parent = this;
 	this.events.addListener("collision", function(who)
 	{    
@@ -446,16 +476,52 @@ window.onload = function()
 		{
 	drawingCanvas.onmousemove = function(ev)
 	{
-		ui.mousemove(ev.clientX, ev.clientY);                  
+		ui.mousemove(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmousedown = function(ev)
 	{
-		ui.mousedown(ev.clientX, ev.clientY);                  
+		ui.mousedown(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmouseup = function(ev)
 	{
-		ui.mouseup(ev.clientX, ev.clientY);                  
-	};	
+		ui.mouseup(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
+	};		
+	ui.events.addListener("mousedown", function(x,y)
+	{    
+		application.events.dispatch("mousedown", [x, y]);
+	});
+	ui.events.addListener("mouseup", function(x,y)
+	{    
+		application.events.dispatch("mouseup", [x, y]);
+	});
+	ui.events.addListener("mousemove", function(x,y)
+	{    
+		application.events.dispatch("mousemove", [x, y]);
+	});
+	ui.events.addListener("click", function(x,y)
+	{    
+		application.events.dispatch("click", [x, y]);
+	});
+	ui.events.addListener("drag", function(x,y)
+	{    
+		application.events.dispatch("drag", [x, y]);
+	});
+	ui.events.addListener("dragend", function(x,y)
+	{    
+		application.events.dispatch("dragend", [x, y]);
+	});
+	ui.events.addListener("keyup", function(keycode)
+	{    
+		application.events.dispatch("keyup", [keycode]);
+	});
+	ui.events.addListener("keydown", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
+	ui.events.addListener("keypress", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
 		    __label1 = new ms.ui.Label( 
 	    "11px Verdana",g_ui_root.manager, g_ui_root);
         __label1 = __label1;
