--- a/xss/production/test/jquery4.html
+++ b/xss/production/test/jquery4.html
@@ -26,8 +26,8 @@ btn2.width(100);
 btn1.text("...");
 btn2.text("...");
 	};
-                btn1.text("One button");
-                btn1.width(100);
+            btn1.text("One button");
+            btn1.width(100);
 	var ev_parent = this;
 	btn1.events.addListener("click", function()
 	{    
@@ -35,8 +35,9 @@ btn2.text("...");
 btn1.text("Other Clicked");
 	}
 	);
-                btn2.text("Two button");
-                btn2.width(100);
+		application.are_obj_events = true;
+            btn2.text("Two button");
+            btn2.width(100);
 	var ev_parent = this;
 	btn2.events.addListener("click", function()
 	{    
@@ -44,14 +45,16 @@ btn1.text("Other Clicked");
 application.target_set(300);
 	}
 	);
-                btn3.text("Reset");
-                btn3.width(100);
+		application.are_obj_events = true;
+            btn3.text("Reset");
+            btn3.width(100);
 	var ev_parent = this;
 	btn3.events.addListener("click", function()
 	{    
 		application.reset();
 	}
 	);
+		application.are_obj_events = true;
 });
 </script>
 <style>
