--- a/xss/production/test/jquery5.html
+++ b/xss/production/test/jquery5.html
@@ -6,8 +6,8 @@
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript">
 $(function() {
-                btn1.text("One button");
-                btn1.width(100);
+            btn1.text("One button");
+            btn1.width(100);
 	var ev_parent = this;
 	btn1.events.addListener("click", function()
 	{    
@@ -15,8 +15,9 @@ $(function() {
 btn1.text("Other Clicked");
 	}
 	);
-                btn2.text("Two button");
-                btn2.width(100);
+		application.are_obj_events = true;
+            btn2.text("Two button");
+            btn2.width(100);
 	var ev_parent = this;
 	btn2.events.addListener("click", function()
 	{    
@@ -24,14 +25,16 @@ btn1.text("Other Clicked");
 application.target_set(300);
 	}
 	);
-                btn3.text("Reset");
-                btn3.width(100);
+		application.are_obj_events = true;
+            btn3.text("Reset");
+            btn3.width(100);
 	var ev_parent = this;
 	btn3.events.addListener("click", function()
 	{    
 		application.reset();
 	}
 	);
+		application.are_obj_events = true;
 });
 </script>
 <style>
