--- a/xss/production/test/ms1.html
+++ b/xss/production/test/ms1.html
@@ -35,11 +35,11 @@ function start(resolution)
 	}  
 	window.setTimeout(update, resolution);  
 }  
-                application.target = 0;
+            application.target = 0;
 test_sequence =
 new ms.state.Sequence(
 g_sequence_manager);
-        var test_sequence = test_sequence;
+        test_sequence = test_sequence;
 	test_sequence.display = function() 
 	{
 		console.log("test_sequence> Target: " + application.target);
@@ -106,7 +106,7 @@ test_sequence1.start();
 test_sequence1 =
 new ms.state.Sequence(
 g_sequence_manager);
-        var test_sequence1 = test_sequence1;
+        test_sequence1 = test_sequence1;
 	test_sequence1.display = function() 
 	{
 		console.log("test_sequence1> Target: " + application.target);
