--- a/xss/production/test/ms2.html
+++ b/xss/production/test/ms2.html
@@ -44,6 +44,7 @@ function start(resolution)
         $super(
         manager        );
         this.events = new ms.event.EventHolder(); 
+        var this__  = this;
                 var this__ = this;
             this.parent_sequence = null;
                     var ____i1 = new ms.state.Interpolator(
@@ -70,16 +71,16 @@ function start(resolution)
                         {t: 2, value: 1},
                         ]);
                     this.addAction(null, "alpha", new ms.state.State(1, 2, ____i2));                    
-                this.target = null;
+            this.target = null;
             if (this.init)
                 this.init();
             },
 });
-                application.target = 0;
+            application.target = 0;
 test_sequence =
 new fade_in(
 g_sequence_manager);
-        var test_sequence = test_sequence;
+        test_sequence = test_sequence;
 	test_sequence.display = function() 
 	{
 		console.log("test_sequence> Target: " + application.target);
@@ -93,7 +94,7 @@ test_sequence1.start();
 test_sequence1 =
 new fade_in(
 g_sequence_manager);
-        var test_sequence1 = test_sequence1;
+        test_sequence1 = test_sequence1;
 	test_sequence1.display = function() 
 	{
 		console.log("test_sequence1> Target: " + application.target);
