--- a/xss/production/test/ui_sprite.html
+++ b/xss/production/test/ui_sprite.html
@@ -6,12 +6,10 @@
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/prototype.js"></script>
-<script type="text/javascript" src="../js/ms-ui.js"></script>
-<script type="text/javascript" src="../js/ms-streamer.js"></script>
-<script type="text/javascript" src="../js/ms-state.js"></script>
 <script type="text/javascript" src="../js/ms-event.js"></script>
 <script type="text/javascript" src="../js/keys.js"></script>
-<script type="text/javascript" src="../js/colors.js"></script>
+		<script type="text/javascript" src="../js/ms-ui.js"></script>
+		<script type="text/javascript" src="../js/ms-streamer.js"></script>
 <script type="text/javascript">	
 var drawingCanvas;		
 var g_ui;
@@ -21,8 +19,7 @@ var g_canvas;
 var g_ui_root;
 var application = {};
 application.events = new ms.event.EventHolder();
-var Sound = new ms.ui.Sound();
-		var streamer = new ms.streamer.Streamer();
+var SoundUtils = new ms.ui.SoundUtils();
 		if(drawingCanvas){
 			var client =
 			{
@@ -30,13 +27,15 @@ var Sound = new ms.ui.Sound();
 				height: 600,
 				canvas: drawingCanvas
 			};
-			var ui = new ms.ui.Manager(client, streamer);
+            var streamer = new ms.streamer.Streamer();							
+			var ui = new ms.ui.Manager(client, streamer);			
 			var g_ui = ui;
 			var g_ui_root = ui.root;
+			var mouse_pressed = false;
 		}
-		var streamer = new ms.streamer.Streamer();
-        var def_package_items = [];
-                def_package_items.push(
+		var streamer = new ms.streamer.Streamer();		
+        var global_package_items = [];
+                global_package_items.push(
             {
 		id:				"__image1",
 		resource_type:	RESOURCE_IMAGE,
@@ -45,7 +44,7 @@ var Sound = new ms.ui.Sound();
 		frame_height:	null,
 		animations:		[]
 });
-                def_package_items.push(
+                global_package_items.push(
             {
 		id:				"__image2",
 		resource_type:	RESOURCE_IMAGE,
@@ -54,7 +53,7 @@ var Sound = new ms.ui.Sound();
 		frame_height:	null,
 		animations:		[]
 });
-                def_package_items.push(
+                global_package_items.push(
             {
 		id:				"monster_sheet",
 		resource_type:	RESOURCE_SPRITE,
@@ -63,10 +62,10 @@ var Sound = new ms.ui.Sound();
 		frame_height:	64,
 		animations:		[]
 });
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "monster_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "monster_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"m_run_l",
 					frame_row:	0,
@@ -76,10 +75,10 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "monster_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "monster_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"m_run_d",
 					frame_row:	2,
@@ -89,10 +88,10 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		true
 				});
 		}		
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "monster_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "monster_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"m_idle",
 					frame_row:	1,
@@ -102,7 +101,7 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		false
 				});
 		}		
-                def_package_items.push(
+                global_package_items.push(
             {
 		id:				"mario_sheet",
 		resource_type:	RESOURCE_SPRITE,
@@ -111,10 +110,10 @@ var Sound = new ms.ui.Sound();
 		frame_height:	45,
 		animations:		[]
 });
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "mario_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "mario_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"m_idle_r",
 					frame_row:	0,
@@ -124,10 +123,10 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "mario_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "mario_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"m_idle_l",
 					frame_row:	2,
@@ -137,10 +136,10 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "mario_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "mario_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"mario_run_r",
 					frame_row:	0,
@@ -150,10 +149,10 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "mario_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "mario_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"mario_run_l",
 					frame_row:	2,
@@ -163,10 +162,10 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		true
 				});
 		}		
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "mario_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "mario_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"m_stop_r",
 					frame_row:	0,
@@ -176,10 +175,10 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "mario_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "mario_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"m_stop_l",
 					frame_row:	2,
@@ -189,7 +188,7 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		false
 				});
 		}		
-                def_package_items.push(
+                global_package_items.push(
             {
 		id:				"azucola_sheet",
 		resource_type:	RESOURCE_SPRITE,
@@ -198,10 +197,10 @@ var Sound = new ms.ui.Sound();
 		frame_height:	67,
 		animations:		[]
 });
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "azucola_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "azucola_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"g1_down",
 					frame_row:	1,
@@ -211,10 +210,10 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "azucola_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "azucola_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"g1_idle",
 					frame_row:	1,
@@ -224,10 +223,10 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "azucola_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "azucola_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"g1_jump",
 					frame_row:	1,
@@ -237,10 +236,10 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "azucola_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "azucola_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"g2_cry",
 					frame_row:	14,
@@ -250,10 +249,10 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		false
 				});
 		}		
-		for(var i = 0; i < def_package_items.length; i++)
+		for(var i = 0; i < global_package_items.length; i++)
         {						
-			if(def_package_items[i].id == "azucola_sheet")
-				def_package_items[i].animations.push
+			if(global_package_items[i].id == "azucola_sheet")
+				global_package_items[i].animations.push
 				({
 					id:			"g2_idle",
 					frame_row:	14,
@@ -263,12 +262,22 @@ var Sound = new ms.ui.Sound();
 					right_to_left:		false
 				});
 		}		
-        var g_startup_package = new ms.streamer.Package(streamer, def_package_items);	
-		g_startup_package.load();	
+		global_package_items.push({
+			id:				"invalid_res",
+			resource_type:	RESOURCE_IMAGE,
+			src:			"images/no_res.png",
+			frame_width:	null,
+			frame_height:	null,
+			animations:		[]
+		});
+        var global_package = new ms.streamer.Package(streamer, global_package_items);	
+		global_package.load();	
+    var canvas_position = {x:0, y:0};
 function start(resolution)  
 {  
 	function updater()  
-	{  
+	{
+		canvas_position = getElementPosition(drawingCanvas);
 		var now   = new Date().getTime();
         if (g_elapsed < 0)
             g_delta = 0; //first update
@@ -283,8 +292,8 @@ function start(resolution)
 	window.setTimeout(updater, resolution);  
 }  
 var monster;var girl1;var girl2;var mario;var lbl1;var lbl2;var lbl3;
-                application.left_key_press = false;
-                application.right_key_press = false;
+            application.left_key_press = false;
+            application.right_key_press = false;
 	var ev_parent = this;
 	application.events.addListener("keydown", function(keycode)
 	{    
@@ -357,25 +366,64 @@ window.onload = function()
 		{
 	drawingCanvas.onmousemove = function(ev)
 	{
-		ui.mousemove(ev.clientX, ev.clientY);                  
+		ui.mousemove(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmousedown = function(ev)
 	{
-		ui.mousedown(ev.clientX, ev.clientY);                  
+		ui.mousedown(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
 	};
 	drawingCanvas.onmouseup = function(ev)
 	{
-		ui.mouseup(ev.clientX, ev.clientY);                  
-	};	
+		ui.mouseup(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
+	};		
+	ui.events.addListener("mousedown", function(x,y)
+	{    
+		application.events.dispatch("mousedown", [x, y]);
+	});
+	ui.events.addListener("mouseup", function(x,y)
+	{    
+		application.events.dispatch("mouseup", [x, y]);
+	});
+	ui.events.addListener("mousemove", function(x,y)
+	{    
+		application.events.dispatch("mousemove", [x, y]);
+	});
+	ui.events.addListener("click", function(x,y)
+	{    
+		application.events.dispatch("click", [x, y]);
+	});
+	ui.events.addListener("drag", function(x,y)
+	{    
+		application.events.dispatch("drag", [x, y]);
+	});
+	ui.events.addListener("dragend", function(x,y)
+	{    
+		application.events.dispatch("dragend", [x, y]);
+	});
+	ui.events.addListener("keyup", function(keycode)
+	{    
+		application.events.dispatch("keyup", [keycode]);
+	});
+	ui.events.addListener("keydown", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
+	ui.events.addListener("keypress", function(keycode)
+	{    
+		application.events.dispatch("keydown", [keycode]);
+	});
 		    monster = new ms.ui.Sprite( 
 	    "monster_sheet",g_ui_root.manager, g_ui_root);
         monster = monster;
-                monster.set_animation("m_idle");
-                monster.position(200, 200);
+            monster.set_x(200);
+            monster.set_y(200);
+            monster.set_animation("m_idle");
 		    girl1 = new ms.ui.Sprite( 
 	    "azucola_sheet",g_ui_root.manager, g_ui_root);
         girl1 = girl1;
-                girl1.set_animation("g1_idle");
+            girl1.set_x(300);
+            girl1.set_y(200);
+            girl1.set_animation("g1_idle");
 	var ev_parent = this;
 	girl1.events.addListener("click", function()
 	{    
@@ -387,11 +435,12 @@ girl1.set_animation("g1_idle");
 	}
 	);
 		application.are_obj_events = true;
-                girl1.position(300, 200);
 		    girl2 = new ms.ui.Sprite( 
 	    "azucola_sheet",g_ui_root.manager, g_ui_root);
         girl2 = girl2;
-                girl2.set_animation("g2_idle");
+            girl2.set_x(400);
+            girl2.set_y(200);
+            girl2.set_animation("g2_idle");
 	var ev_parent = this;
 	girl2.events.addListener("click", function()
 	{    
@@ -402,27 +451,30 @@ girl2.set_animation("g2_idle");
 	}
 	);
 		application.are_obj_events = true;
-                girl2.position(400, 200);
 		    mario = new ms.ui.Sprite( 
 	    "mario_sheet",g_ui_root.manager, g_ui_root);
         mario = mario;
-                mario.set_animation("m_idle_r");
-                mario.position(300, 400);
+            mario.set_x(300);
+            mario.set_y(400);
+            mario.set_animation("m_idle_r");
 		    lbl1 = new ms.ui.Label( 
 	    "12px Verdana",g_ui_root.manager, g_ui_root);
         lbl1 = lbl1;
-                lbl1.text("Press left arrow to walk the monster");
-                lbl1.position(100, 100);
+            lbl1.set_x(100);
+            lbl1.set_y(100);
+            lbl1.text("Press left arrow to walk the monster");
 		    lbl2 = new ms.ui.Label( 
 	    "12px Verdana",g_ui_root.manager, g_ui_root);
         lbl2 = lbl2;
-                lbl2.text("Click the blond girl to crash her down and jump later (testing animation queue)");
-                lbl2.position(100, 120);
+            lbl2.set_x(100);
+            lbl2.set_y(120);
+            lbl2.text("Click the blond girl to crash her down and jump later (testing animation queue)");
 		    lbl3 = new ms.ui.Label( 
 	    "12px Verdana",g_ui_root.manager, g_ui_root);
         lbl3 = lbl3;
-                lbl3.text("Click the triguena girl to make her cry (testing animation bounce)");
-                lbl3.position(100, 140);
+            lbl3.set_x(100);
+            lbl3.set_y(140);
+            lbl3.text("Click the triguena girl to make her cry (testing animation bounce)");
 			document.onkeydown = function(ev)
 			{
 				ui.keydown(ev.keyCode);                  
@@ -443,9 +495,8 @@ girl2.set_animation("g2_idle");
 }
 </script>
 </head>
-<body>
-	<canvas id="myCanvas" width="600" height="600">
-		<p>Your browser doesn't support canvas.</p>
-	</canvas>
+<body>	
+	<canvas id="myCanvas" width="600" height="600"
+		style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>	
 </body>
 </html>
